# msgpack-serde

./: Cargo.toml
.github/scripts/: release.sh
.github/workflows/: ci.yml  publish.yaml
src/: data_view.rs  de.rs  error.rs  format.rs  lib.rs  ser.rs  write.rs  write_encoder.rs
src/de/: _enum.rs  _struct.rs  array.rs  de.rs  map.rs  mod.rs
src/ser/: _struct.rs  array.rs  map.rs  mod.rs  ser.rs
src/wrappers/: bigint.rs  json.rs  mod.rs  polywrap_bigint.rs  polywrap_json.rs
