[package]
name = "serde-example"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding"]
description = "An example Serializer and Deserializer data format for Serde"
documentation = "https://serde.rs/data-format.html"
edition = "2021"
keywords = ["serde"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/serde-rs/example-format"
rust-version = "1.56"

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
byteorder = "1.4.3"
thiserror = "1.0.30"
num-bigint = { version = "0.4", default-features = false, features = ["serde"] }
num-traits = { version = "0.2.14", default-features = false }
bigdecimal = { version = "0.3.0", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.74", default-features = false, features = ["alloc"] }
serde_bytes = "0.11.9"

[lib]
doc-scrape-examples = false

[dev-dependencies]
serde_derive = "1.0"
