[package]
name = "polywrap_msgpack_serde"
version = "0.0.2-beta.4"
authors = ["Nestor Amesty <nestor@polywrap.io>"]
categories = ["encoding"]
description = "An msgpack Serializer and Deserializer data format with Serde for Polywrap"
edition = "2021"
keywords = ["serde", "encoding", "decoding", "serialization", "deserialization"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
byteorder = "1.4.3"
thiserror = "1.0.30"
num-bigint = { version = "0.4", default-features = false, features = ["serde"] }
bigdecimal = { version = "0.3.0", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.74", default-features = false, features = ["alloc"] }
serde_bytes = "0.11.9"

[dev-dependencies]
serde_derive = "1.0"
